@@ -495,7 +495,8 @@ if ~isempty(ov)
     if have_old_style_ov
         opt = apply_old_mpoption_overrides(opt, ov);
     else
-        vf = nested_struct_copy(mpoption_default(), mpoption_optional_fields());
+        vf = nested_struct_copy(mpoption_default(), mpoption_info_mips('V'));
+        vf = nested_struct_copy(vf, mpoption_optional_fields());
         ex = struct(...
             'name', {...
                 'cpf.user_callback_args' ...
@@ -1369,7 +1370,7 @@ opt = struct(...
             'qg',                   1   ), ...
         'force',                0, ...
         'suppress_detail',      -1  ), ...
-    'mips',                 struct(...
+    'mips',                 struct(...  %% see mpoption_info_mips() for optional fields
         'step_control',         0, ...
         'feastol',              0, ...
         'gradtol',              1e-6, ...
