@@ -38,9 +38,9 @@ function rv = mipsver(varargin)
 %   you additional permission to convey the resulting work.
 
 v = struct( 'Name',     'MIPS', ... 
-            'Version',  '1.0.2', ...
+            'Version',  '1.1', ...
             'Release',  '', ...
-            'Date',     '01-Jul-2014' );
+            'Date',     '02-Dec-2014' );
 if nargout > 0
     if nargin > 0
         rv = v;
